# llm-ua

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
configs/: attr_gpt2_arc-c.yaml  attr_llama-2_arc-c.yaml  ft_gpt2_arc-c.yaml  ft_llama-2_arc-c.yaml
llm_ua/: inference.py
llm_ua/attribution/: __init__.py  attribution.py  perturbation.py  post_processing.py  visualization.py
llm_ua/attribution/legacy/: hooks.py
llm_ua/datasets/: __init__.py  arc.py  base.py
llm_ua/models/: __init__.py  bayesian.py  builder.py
llm_ua/utils/: __init__.py
tests/: test_arc_dataset.py
tools/: app.py  attribution_answers.py  attribution_cli.py  fine_tune.py  infer_with_perturbation.py  ua_optimization.py  ua_optimization_ds.py
tools/templates/: index.html
