[metadata]
name = llm_ua
version = 0.1.0
description = TODO
keywords = TODO


[options]
packages = find:
zip_safe = False
install_requires =
    numpy
    torch
    transformers
    tokenizers
    accelerate
    alive-progress
    torchvision
    Pillow
    mmengine
    datasets
    peft
    protobuf
    sentencepiece
    bayesian-lora
    torchmetrics
    plotly
    tabulate
    pandas

[options.extras_require]
dev =
    build
    flake8
    isort
    mypy
    pytest
    yapf
    pre-commit
    Flask

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
split_all_top_level_comma_separated_values = true
column_limit = 120

[flake8]
max-line-length = 120
ignore = E722,E203,E231,F841,W503,W504,F403,E402,F405
per-file-ignores = __init__.py: F401

[mypy]
allow_redefinition = true
ignore_missing_imports = true
no_site_packages = true
plugins = numpy.typing.mypy_plugin

[mypy-tests.*]
strict_optional = false

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
extra_standard_library = pkg_resources,setuptools,logging,os,warnings,abc,typing,collections,functools,
    datetime,copy,inspect,xml,multiprocessing,re,sys,argparse,dataclass
known_first_party = llm_ua
known_third_party = numpy,torch,transformers,tokenizers,accelerate,alive_progress,torchvision,PIL,mmengine,datasets,
    peft,evaluate,bayesian_lora,torchmetrics,plotly,tabulate,pandas
no_lines_before = STDLIB,LOCALFOLDER
default_section = THIRDPARTY
